endpoint delete remover item opcional do hamburger]
